@@ -27,3 +27,4 @@ libxml.spec
 testHTML
 testSAX
 testXPath
+libxml-2.0.pc
